fix spacing in Safari

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -14,6 +14,14 @@
 
   @supports (padding-bottom: env(safe-area-inset-bottom)) {
     padding-bottom: calc(var(--space-l5) + env(safe-area-inset-bottom));
+
+    @include respond-above(md) {
+      padding-bottom: calc(var(--space-l3) + env(safe-area-inset-bottom));
+    }
+
+    @include respond-above(lg) {
+      padding-bottom: calc(var(--space-l5) + env(safe-area-inset-bottom));
+    }
   }
 }
 
